kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dynamic-deployment

spec:
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001

  type: ClusterIP
